tests/examples/good/misc/good127.lat
int main() {
    A a = new A;
    if (a == cast<A, null>) {
        printString("wrong");
    } else {
        printString("ok");
    }

    return 0;
}

class A {
    int a;
}