tests/examples/bad/class_member_field_redeclaration.lat
int main() {
    return 1;
}
 
class A {
    int a;
    int a;
}

